# FTE-analysis-libraries

./: .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  MIGRATION_v0.9.1_to_v1.0.0.md  MIGRATION_v0.9.1_to_v1.1.1.md  README.md  add_type_ignores.py  annotate.py  fix_annotations.py  fix_summaries.py  gen_docstrings.py  migrate_notebooks.py  mypy.ini  pyproject.toml  setup.py  update_notebooks_post_v1.py  update_notebooks_post_v2.py  update_notebooks_post_v3.py
FTE_analysis_libraries/: Biologic.py  CLAUDE.md  Electrochemistry.py  General.py  IV.py  PLQY.py  RFB.py  RFB_250824.py  Spectrum.py  TRPL.py  Tkdialogs.py  XYdata.py
FTE_analysis_libraries/System_data/: 089430477_HL-3 plus-CAL_cc_20181119_VIS.txt  Astmg173.xls  OSRAM_930.txt  Vocsq.csv  Vocsq_0.01 eV.csv  high CRI LED (YJ-VTC-2835MX-G2) 5000 K.csv  luminosity function CIE 1931.csv
FTE_analysis_libraries/System_data/Calibration_lamp_spectra/: caldata-BN-LH250-V01_sn51102-LH250_snL2229-200805.txt
docs/: conf.py  index.rst
docs/api/: electrochemistry.rst  general.rst  iv.rst  plqy.rst  rfb.rst  spectrum.rst  tkdialogs.rst  trpl.rst  xydata.rst
fte_analysis_libraries/: Electrochemistry.py  General.py  IV.py  PLQY.py  RFB.py  Spectrum.py  TRPL.py  Tkdialogs.py  XYdata.py
fte_analysis_libraries.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fte_analysis_libraries/System_data/: Vocsq.csv  Vocsq_0.01 eV.csv
tests/: test_coverage_boost.py  test_coverage_boost10.py  test_coverage_boost11.py  test_coverage_boost12.py  test_coverage_boost13.py  test_coverage_boost14.py  test_coverage_boost15.py  test_coverage_boost16.py  test_coverage_boost17.py  test_coverage_boost18.py  test_coverage_boost19.py  test_coverage_boost2.py  test_coverage_boost20.py  test_coverage_boost21.py  test_coverage_boost3.py  test_coverage_boost4.py  test_coverage_boost5.py  test_coverage_boost6.py  test_coverage_boost7.py  test_coverage_boost8.py  test_coverage_boost9.py  test_eis.py  test_general.py  test_jv.py  test_plqy.py  test_rfb.py  test_spectrum.py  test_trpl.py  test_xy_data.py
tests/fixtures/: jv_curve.csv  xy_data.csv
