[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fte-analysis-libraries"
version = "1.0.0"
description = "An assortment of scientific analysis libraries for photovoltaic and energy materials research."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Felix Eickemeyer", email = "felix.eickemeyer@epfl.ch" }
]
keywords = ["photovoltaics", "DSSC", "perovskite", "EIS", "solar cells", "data analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "lmfit",
    "impedance",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "sphinx",
    "numpydoc",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["fte_analysis_libraries"]

[tool.hatch.build.targets.wheel.sources]
"fte_analysis_libraries" = "fte_analysis_libraries"

[tool.hatch.build.targets.sdist]
include = [
    "fte_analysis_libraries/**",
    "README.md",
    "LICENSE",
]

[project.urls]
Homepage = "https://github.com/FTEickemeyer/FTE-analysis-libraries"
Repository = "https://github.com/FTEickemeyer/FTE-analysis-libraries"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (l, O, I common in physics)
    "F401",   # unused imports (many are re-exported)
    "F841",   # local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811"]   # redefinition of unused name (fixtures)

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
no_strict_optional = true
